--- a/src/CollectSFDataGui/Client/Shared/NavMenu.razor
+++ b/src/CollectSFDataGui/Client/Shared/NavMenu.razor
@@ -7,11 +7,11 @@
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
     <ul class="nav flex-column">
-        <li class="nav-item px-3">
+        @*<li class="nav-item px-3">
             <NavLink class="nav-link" href="configuration">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Configuration
             </NavLink>
-        </li>
+        </li>*@
         @* <li class="nav-item px-3">
             <NavLink class="nav-link" href="eventconsole" Match="NavLinkMatch.All">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Event Console
