--- a/src/CollectSFDataGui/Client/_Imports.razor
+++ b/src/CollectSFDataGui/Client/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using CollectSFDataGui.Client
 @using CollectSFDataGui.Client.Shared
+@using CollectSFDataGui.Shared
 @using CollectSFData
 @using CollectSFData.Common
 @using CollectSFData.Azure
